OOO date marker style fix
- OOO view no longer has the date marker shadow style issue when
bringing a project into view
- previously the shadows overlapped causing a visual blip

--- a/app/styles/resource.scss
+++ b/app/styles/resource.scss
@@ -24,7 +24,7 @@
     border-right:10px solid #fff;
     left:0;
     margin-top:-3px;
-    padding-bottom:10px;
+    padding-bottom:22px;
     position:fixed;
     top:155px;
     z-index:7;
